--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = django-cjkcms
-version = 0.1.0
-description = Content Management System, based on Codered CRX, installable as a Django app into any Wagtail 2.x/3.x site.
+version = 0.1.2
+description = Wagtail Content Management System, installable as a Django app into any Wagtail 3.x site. Based on Codered CRX.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/cjkpl/django-cjkcms
@@ -26,7 +26,7 @@ classifiers =
 [options]
 include_package_data = true
 packages = find:
-python_requires = >=3.8
+python_requires = >=3.9
 install_requires =
     Django >= 4.0
-    Wagtail >= 2.16.2
+    Wagtail >= 3.0.0
