--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-cjkcms
-version = 0.1.2
+version = 0.1.3
 description = Wagtail Content Management System, installable as a Django app into any Wagtail 3.x site. Based on Codered CRX.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -30,3 +30,6 @@ python_requires = >=3.9
 install_requires =
     Django >= 4.0
     Wagtail >= 3.0.0
+    django-bootstrap5 >= 22.1
+    wagtail-cache >= 2.1.1
+    wagtail-seo >= 2.2.0
