--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-cjkcms
-version = 0.2.1
+version = 0.2.2
 description = Wagtail Content Management System, installable as a Django app into any Wagtail 3.x site. Based on Codered CRX.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -31,5 +31,5 @@ install_requires =
     Django >= 4.0
     Wagtail >= 4.0.0
     django-bootstrap5 >= 22.1
-    wagtail-cache @ git+https://github.com/cjkpl/wagtail-cache.git
-    wagtail-seo @ git+https://github.com/cjkpl/wagtail-seo.git
+    # wagtail-cache >= 2.1.2 # temporarily needs pip install git+https://github.com/cjkpl/wagtail-cache.git
+    # wagtail-seo >= 2.2.1 # temporarily needs pip install git+https://github.com/cjkpl/wagtail-seo.git
