--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-cjkcms
-version = 0.2.5
+version = 0.2.6
 description = Wagtail Content Management System, installable as a Django app into any Wagtail 4.x site. Based on Codered CRX.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -11,7 +11,9 @@ license = BSD-3-Clause  # Example license
 classifiers =
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 4.0 
+    Framework :: Django :: 4.0
+    Framework :: Django :: 4.1
+    Framework :: Wagtail :: 4
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
