--- a/setup.cfg
+++ b/setup.cfg
@@ -35,3 +35,7 @@ install_requires =
     django-bootstrap5 >= 22.1
     # wagtail-cache >= 2.1.2 # temporarily needs pip install git+https://github.com/cjkpl/wagtail-cache.git
     # wagtail-seo >= 2.2.1 # temporarily needs pip install git+https://github.com/cjkpl/wagtail-seo.git
+
+[flake8]
+max-line-length = 100
+exclude = .*,migrations,build,dist
