Comments and docs cleanup to comply with codespell

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,3 +39,10 @@ install_requires =
 [flake8]
 max-line-length = 100
 exclude = .*,migrations,build,dist
+
+[codespell]
+ignore-words-list = worl
+skip = migrations,build,dist,*.map
+
+[mypy]
+ignore_missing_imports = True
