Modified draftail features set available to users. Added new features: left/center/right align.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-cjkcms
-version = 0.2.7
+version = 0.2.8
 description = Wagtail Content Management System, installable as a Django app into any Wagtail 4.x site. Based on Codered CRX.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -30,11 +30,10 @@ include_package_data = true
 packages = find:
 python_requires = >=3.9
 install_requires =
-    Django >= 4.0
     Wagtail >= 4.0.1
     django-bootstrap5 >= 22.1
-    # wagtail-cache >= 2.1.2 # temporarily needs pip install git+https://github.com/cjkpl/wagtail-cache.git
-    # wagtail-seo >= 2.2.1 # temporarily needs pip install git+https://github.com/cjkpl/wagtail-seo.git
+    wagtail-cache >= 2.2.0
+    wagtail-seo >= 2.3.0
 
 [flake8]
 max-line-length = 100
