--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-git+https://github.com/cjkpl/wagtail-cache.git
-git+https://github.com/cjkpl/wagtail-seo.git
 -e ./
 black
 codespell
@@ -13,5 +11,6 @@ sphinx-wagtail-theme
 twine
 wheel
 django-bootstrap5
-Django>=4.1,<4.2
-wagtail>=4.0,<4.1
+wagtail>=4.0,<5.0
+wagtail-seo>=2.3.0
+wagtail-cache>=2.2.0
