Renamed package to wagtail-cjkcms. Changed versioning from semantic to calendar

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = django-cjkcms
-version = 0.2.8.2
+name = wagtail-cjkcms
+version = attr: cjkcms.__version__
 description = Wagtail Content Management System, installable as a Django app into any Wagtail 4.x site. Based on Codered CRX.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/cjkpl/django-cjkcms
+url = https://github.com/cjkpl/wagtail-cjkcms
 author = Grzegorz Krol
 author_email = gk@cjk.pl
 license = BSD-3-Clause  # Example license
@@ -22,6 +22,7 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Internet :: WWW/HTTP
     Topic :: Internet :: WWW/HTTP :: Site Management
 
