--- a/setup.cfg
+++ b/setup.cfg
@@ -31,10 +31,13 @@ include_package_data = true
 packages = find:
 python_requires = >=3.9
 install_requires =
-    Wagtail >= 4.0.1
+    wagtail >= 4.0.1
     django-bootstrap5 >= 22.1
     wagtail-cache >= 2.2.0
     wagtail-seo >= 2.3.0
+setup_requires =
+    setuptools >= 38.3.0
+test_suite = load_tests.get_suite
 
 [flake8]
 max-line-length = 100
