--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,5 @@ include CHANGELOG.md
 recursive-include docs *
 recursive-include cjkcms/management/commands *
 recursive-include cjkcms/static *
+recursive-include cjkcms/static/images *
 recursive-include cjkcms/templates *
