Work in progress: command to create basic project template

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,10 @@ setup_requires =
     setuptools >= 38.3.0
 test_suite = load_tests.get_suite
 
+[options.entry_points]
+console_scripts =
+    cjkcms=cjkcms.bin.cjkcms:main
+
 [flake8]
 max-line-length = 100
 exclude = .*,migrations,build,dist
