--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ sphinx-wagtail-theme
 twine
 wheel
 django-bootstrap5
-wagtail>=4.0,<5.0
-wagtail-seo>=2.3.0
-wagtail-cache>=2.2.0
+wagtail>=4.0,<6.0
+git+https://github.com/cjkpl/wagtail-seo.git
+git+https://github.com/cjkpl/wagtail-cache.git
