--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,7 @@ exclude = .*,migrations,build,dist
 
 [codespell]
 ignore-words-list = worl
-skip = migrations,build,dist,*.map,cjkcms/project_template/webpack/package*.json
+skip = migrations,build,dist,*.map,package*.json
 
 [mypy]
 ignore_missing_imports = True
