--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,3 +3,15 @@ wagtail>=4.1
 # until codered fixes their packages, use cjkpl forks
 git+https://github.com/cjkpl/wagtail-seo.git
 git+https://github.com/cjkpl/wagtail-cache.git
+
+black
+codespell
+flake8
+mypy
+pytest
+pytest-cov
+pytest-django
+sphinx
+sphinx-wagtail-theme
+twine
+wheel
