--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 django-bootstrap5
-wagtail>=4.1
+django>=4.2
+wagtail>=5.0
 # until these packages support Wagtail 5, use cjkpl forks
 git+https://github.com/cjkpl/wagtail-seo.git
 git+https://github.com/cjkpl/wagtail-cache.git
