--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,6 @@ include LICENSE
 include README.md
 include CHANGELOG.md
 recursive-include docs *
-recursive-include cjkcms/management/commands *
-recursive-include cjkcms/static *
-recursive-include cjkcms/static/images *
-recursive-include cjkcms/templates *
+recursive-include cjkcms *
+global-exclude */__pycache__/*
+global-exclude *.pyc
