Work in progress: new nav item entry type (social media). Todo: add functionality of displaying the new entry type

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ packages = ["cjkcms"]
 [tool.distutils.bdist_wheel]
 universal = true
 
+[toool.ruff]
+line-length = 100
+
+
 [project.scripts]
 cjkcms = "cjkcms.bin.cjkcms:main"
 
