Updated dependencies to cjkcpl's forked pypi packages where original not compatible with Wagtail 5.x. New changelog format. Version up.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,9 @@
 django-bootstrap5
 wagtail>=4.1
 # until these packages support Wagtail 5, use cjkpl forks
-git+https://github.com/cjkpl/wagtail-seo.git
-git+https://github.com/cjkpl/wagtail-cache.git
-git+https://github.com/cjkpl/wagtail-color-panel.git
+cjkcms-seo
+wagtail-cache
+cjkcms-color-panel.git
 
 black
 codespell
