--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,8 @@ deps =
     postgres: psycopg2-binary
 
 commands= python setup.py test
+
+[pytest]
+DJANGO_SETTINGS_MODULE = cjkcms.tests.settings
+addopts = --doctest-modules --durations=0
+norecursedirs = project_template
