Added support for 25 Bootswatch.com themes

--- a/tox.ini
+++ b/tox.ini
@@ -21,5 +21,9 @@ commands= python setup.py test
 
 [pytest]
 DJANGO_SETTINGS_MODULE = cjkcms.tests.settings
-addopts = --doctest-modules --durations=0
+addopts = --doctest-modules
+# --durations=0
 norecursedirs = project_template
+filterwarnings = 
+    ignore
+    default:::cjkcms
