--- a/cjkcms/project_template/webpack/package.json
+++ b/cjkcms/project_template/webpack/package.json
@@ -40,9 +40,9 @@
     "sass": "~1.49.9",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
-    "stylelint": "^14.2.0",
-    "stylelint-config-standard-scss": "^6.1.0",
-    "stylelint-webpack-plugin": "^3.1.1",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.0.0",
+    "stylelint-webpack-plugin": "^4.1.1",
     "webpack": "^5.66.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "^4.9.1",
@@ -50,7 +50,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "mdb-ui-kit": "^6.4.2",
     "core-js": "^3.20.3"
   }
 }
