Updated codespell exclusions to include mdb library

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ exclude = .*,migrations,build,dist
 
 [codespell]
 ignore-words-list = worl
-skip = migrations,build,dist,*.map,package*.json
+skip = migrations,build,dist,*.map,package*.json,mdb.umd.*
 
 [mypy]
 ignore_missing_imports = True
