Bugfix update. Changes described in CHANGELOG for version 24.6.1

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ max-line-length = 100
 exclude = .*,migrations,build,dist
 
 [codespell]
-ignore-words-list = worl
+ignore-words-list = worl, assertIn
 skip = migrations,build,dist,*.map,package*.json,mdb.umd.*
 
 [mypy]
