--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,4 +36,4 @@ jobs:
         # env:
         #   DJANGO_ALLOW_ASYNC_UNSAFE: 1
         run: |
-          pytest cjkcms
+          pytest cjkcms -s
