--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11", "3.12"]
+        wagtail-version: ["6.4", "6.0"]
 
     steps:
       - name: Checkout repository
@@ -26,6 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          pip install wagtail==${{ matrix.wagtail-version }}
       - name: Lint with ruff, flake8 and codespell
         run: |
           # stop the build if there are Python syntax errors or undefined names
