--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11", "3.12"]
-        wagtail-version: ["6.4", "6.0"]
+        wagtail-version: ["6.4.1"]
 
     steps:
       - name: Checkout repository
