--- a/cjkcms/project_template/webpack/requirements.txt
+++ b/cjkcms/project_template/webpack/requirements.txt
@@ -2,7 +2,4 @@ wagtail-cjkcms=={{cjkcms_version.0}}.{{cjkcms_version.1}}.*
 python-webpack-boilerplate
 
 # To use with PostgreSQL, uncomment the line below:
-#psycopg2
-#
-#or for psycopg3: 
-#psycopg[binary]
+#psycopg
