Restored wagtail-color-panel in requireemnts, even though it is not used any more, but required by migration 0010

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ django>=5.0
 wagtail>=6.0
 wagtail-seo>=3.0
 wagtail-cache>=2.5.1
+wagtail-color-panel # for deprecaated migration 0010. To be removed in future
